================================================================================
SVN $Id: ChangeLog 45058 2013-03-20 16:12:21Z jedwards $
SVN $URL: https://parallelio.googlecode.com/svn/trunk $
================================================================================
This file describes what tags were created and why
===========================
Originator: jedwards
Date: Dec 11, 2013
Model: pio
Version: pio1_8_6
One-line summary: further build updates



===========================
Originator: jedwards
Date: Dec 06, 2013
Model: pio
Version: pio1_8_5
One-line summary: Get cmake utilities from external repository

D pio/cmake
D SVN_EXTERNAL_DIRECTORIES
A pio/SVN_EXTERNAL_DIRECTORIES
 
===========================
Originator: jedwards
Date: Dec 06, 2013
Model: pio
Version: pio1_8_4
One-line summary: added unittests - tested on yellowstone_intel and hopper_pgi - these tests must be run from an
  interative login session

A unittests/

===========================
Originator: jedwards
Date: Dec 03, 2013
Model: pio
Version: pio1_8_3
One-line summary: cmake updates

M pio/cmake/TryCSizeOf.f90
M pio/cmake/TryMPISERIAL.f90
M pio/CMakeLists.txt


===========================
Originator: jedwards
Date: Nov 24, 2013
Model: pio
Version: pio1_8_2
One-line summary: fix issues with put in pnetcdf

M   pionfput_mod.F90.in
M   pionfput_mod.F90

===========================
Originator: jedwards
Date: Nov 19, 2013
Model: pio
Version: pio1_8_1
One-line summary: Fixes for problems found in the build of cesm1_3_alpha06c

  M pio_types.F90
  M pio.F90
  M nf_mod.F90



===========================
Originator: jedwards
Date: Nov 13, 2013
Model: pio
Version: pio1_8_0
One-line summary:  switch to a cmake build, updates for mira, fixes for netcdf4p

	remove all autoconf support files, add cmake support files. 
	it is currently required to run tests by hand, a cmake implimentation
	of tests is planned but incomplete.   CESM tests have been run 
	on this tag.   
