@@ -1,3 +1,3 @@
 pio/bin http://parallelio.googlecode.com/svn/genf90/trunk_tags/genf90_131120
-pio/cmake https://github.com/quantheory/CMake_Fortran_utils/tags/CMake_Fortran_utils_140107
+pio/cmake https://github.com/quantheory/CMake_Fortran_utils/tags/CMake_Fortran_utils_140116
 
