@@ -5,6 +5,17 @@ SVN $URL: https://parallelio.googlecode.com/svn/trunk $
 This file describes what tags were created and why
 ===========================
 Originator: jedwards
+Date: Jan 16, 2014
+Model: pio
+Version: pio1_8_7
+One-line  Fix issues with BGQ topology, fix minor memleaks
+
+M   topology.c
+M   piolib_mod.F90
+
+
+===========================
+Originator: jedwards
 Date: Dec 11, 2013
 Model: pio
 Version: pio1_8_6
